# quantum-chess-ai

./: .gitignore  README.md  draft00.py  draft_vsgame.py  game00.txt  play_ai.py  pyproject.toml  requirements.txt  train_alphago.py
.history/: train_alphago_20250807145010.py
alphago_chess/: README.md  __init__.py  encoding.py  mcts.py  network.py  train.py  utils.py
docs/: qchess_rules.md
history_file/: chess_utils.py  draft00.py  utils.py
history_vsgame/: case_1.txt  case_10.txt  case_100.txt  case_11.txt  case_12.txt  case_13.txt  case_14.txt  case_15.txt  case_16.txt  case_17.txt  case_18.txt  case_19.txt  case_2.txt  case_20.txt  case_21.txt  case_22.txt  case_23.txt  case_24.txt  case_25.txt  case_26.txt  case_27.txt  case_28.txt  case_29.txt  case_3.txt  case_30.txt  case_31.txt  case_32.txt  case_33.txt  case_34.txt  case_35.txt  case_36.txt  case_37.txt  case_38.txt  case_39.txt  case_4.txt  case_40.txt  case_41.txt  case_42.txt  case_43.txt  case_44.txt  (+61 more)
kingswar/: chess.py  chess_edit_by_an.py  chess_edit_by_jeff.py  quantum_chess.py
minimax/: README.md  ana_v1.py  new_v1.py
minimax/quantum_chess_analysis/: summary.json
python/qchess/: __init__.py  ai.py  chess_utils.py  gui.py  (+2 more)
tests/: test_basic.py  test_gym.py
web/: .env.local.example  .eslintrc.json  .gitignore  .prettierignore  .vercelignore  README.md  README_DEPLOYMENT.md  debug-sim.js  jest.config.js  next.config.js  package-lock.json  package.json  setup.sh  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vercel.json
ws_gym/: README_gym.md  draft_basic_gym.py  draft_nn.py
(+82 files in other folders)
